bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q6 (Execution Plan, String).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(reviewer@0) as reviewer, ENC_PT(<uuid>@1) as reviewerAvgScore]
  FilterExec: EBV(GT(<uuid>@1, MUL(<uuid>@2, 4:2:Some(1500000000000000000),36,18))), projection=[reviewer@0, <uuid>@1]
    AggregateExec: mode=Final, gby=[reviewer@0 as reviewer], aggr=[<uuid>, <uuid>]
      CoalescePartitionsExec
        AggregateExec: mode=Partial, gby=[reviewer@1 as reviewer], aggr=[<uuid>, <uuid>]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@1, review@0)], projection=[avgScore@0, reviewer@2, score@4]
            CrossJoinExec
              ProjectionExec: expr=[<uuid>@0 as avgScore]
                AggregateExec: mode=Final, gby=[], aggr=[<uuid>]
                  CoalescePartitionsExec
                    AggregateExec: mode=Partial, gby=[], aggr=[<uuid>]
                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@0, review@0)], projection=[score@2]
                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@1)], projection=[review@1]
                          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Producer6>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer> AND object@3 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Producer6>, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer> <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Producer6> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Producer6> <= object_max@6, required_guarantees=[object in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Producer6>), predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer>)]
                          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> ?product], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as review, object@3 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor>)]
                        UnionExec
                          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1> ?score], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as review, object@3 as score], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1>)]
                          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2> ?score], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as review, object@3 as score], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2>)]
                          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating3> ?score], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as review, object@3 as score], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating3> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating3> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating3> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating3>)]
                          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating4> ?score], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as review, object@3 as score], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating4> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating4> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating4> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating4>)]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@0, review@0)], projection=[review@0, reviewer@2]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@1)], projection=[review@1]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Producer6>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer> AND object@3 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Producer6>, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer> <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Producer6> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Producer6> <= object_max@6, required_guarantees=[object in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Producer6>), predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer>)]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> ?product], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as review, object@3 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor>)]
                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://purl.org/stuff/rev#reviewer> ?reviewer], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as review, object@3 as reviewer], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://purl.org/stuff/rev#reviewer> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://purl.org/stuff/rev#reviewer> AND <http://purl.org/stuff/rev#reviewer> <= predicate_max@2, required_guarantees=[predicate in (<http://purl.org/stuff/rev#reviewer>)]
            UnionExec
              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1> ?score], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as review, object@3 as score], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1>)]
              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2> ?score], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as review, object@3 as score], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2>)]
              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating3> ?score], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as review, object@3 as score], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating3> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating3> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating3> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating3>)]
              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating4> ?score], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as review, object@3 as score], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating4> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating4> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating4> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating4>)]
