bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q6 (Execution Plan, object-id).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(reviewer@0) as reviewer, ENC_PT(<uuid>@1) as reviewerAvgScore]
  FilterExec: EBV(GT(<uuid>@1, MUL(<uuid>@2, 4:2:Some(1500000000000000000),36,18))), projection=[reviewer@0, <uuid>@1]
    AggregateExec: mode=Final, gby=[reviewer@0 as reviewer], aggr=[<uuid>, <uuid>]
      CoalescePartitionsExec
        AggregateExec: mode=Partial, gby=[reviewer@1 as reviewer], aggr=[<uuid>, <uuid>]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@1, review@0)], projection=[avgScore@0, reviewer@2, score@4]
            CrossJoinExec
              ProjectionExec: expr=[<uuid>@0 as avgScore]
                AggregateExec: mode=Final, gby=[], aggr=[<uuid>]
                  CoalescePartitionsExec
                    AggregateExec: mode=Partial, gby=[], aggr=[<uuid>]
                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@0, review@0)], projection=[score@2]
                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@1)], projection=[review@1]
                          DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Producer6>], blank_node_mode=Variable
                          FilterExec: DynamicFilter [ product@1 >= 17157 AND product@1 <= 17218 AND product@1 IN (SET) ([17157, 17158, 17159, 17160, 17161, 17162, 17163, 17164, 17165, 17166, 17167, 17168, 17169, 17170, 17171, 17172, 17173, 17174, 17175, 17176, 17177, 17178, 17179, 17180, 17181, 17182, 17183, 17184, 17185, 17186, 17187, 17188, 17189, 17190, 17191, 17192, 17193, 17194, 17195, 17196, 17197, 17198, 17199, 17200, 17201, 17202, 17203, 17204, 17205, 17206, 17207, 17208, 17209, 17210, 17211, 17212, 17213, 17214, 17215, 17216, 17217, 17218]) ]
                            DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> ?product], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ product@1 >= 17157 AND product@1 <= 17218 AND product@1 IN (SET) ([17157, 17158, 17159, 17160, 17161, 17162, 17163, 17164, 17165, 17166, 17167, 17168, 17169, 17170, 17171, 17172, 17173, 17174, 17175, 17176, 17177, 17178, 17179, 17180, 17181, 17182, 17183, 17184, 17185, 17186, 17187, 17188, 17189, 17190, 17191, 17192, 17193, 17194, 17195, 17196, 17197, 17198, 17199, 17200, 17201, 17202, 17203, 17204, 17205, 17206, 17207, 17208, 17209, 17210, 17211, 17212, 17213, 17214, 17215, 17216, 17217, 17218]) ]]
                        UnionExec
                          FilterExec: DynamicFilter [ review@0 >= 84390 AND review@0 <= 115543 AND hash_lookup ]
                            DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1> ?score], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ review@0 >= 84390 AND review@0 <= 115543 AND hash_lookup ]]
                          FilterExec: DynamicFilter [ review@0 >= 84390 AND review@0 <= 115543 AND hash_lookup ]
                            DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2> ?score], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ review@0 >= 84390 AND review@0 <= 115543 AND hash_lookup ]]
                          FilterExec: DynamicFilter [ review@0 >= 84390 AND review@0 <= 115543 AND hash_lookup ]
                            DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating3> ?score], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ review@0 >= 84390 AND review@0 <= 115543 AND hash_lookup ]]
                          FilterExec: DynamicFilter [ review@0 >= 84390 AND review@0 <= 115543 AND hash_lookup ]
                            DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating4> ?score], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ review@0 >= 84390 AND review@0 <= 115543 AND hash_lookup ]]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@0, review@0)], projection=[review@0, reviewer@2]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@1)], projection=[review@1]
                  DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Producer6>], blank_node_mode=Variable
                  FilterExec: DynamicFilter [ product@1 >= 17157 AND product@1 <= 17218 AND product@1 IN (SET) ([17157, 17158, 17159, 17160, 17161, 17162, 17163, 17164, 17165, 17166, 17167, 17168, 17169, 17170, 17171, 17172, 17173, 17174, 17175, 17176, 17177, 17178, 17179, 17180, 17181, 17182, 17183, 17184, 17185, 17186, 17187, 17188, 17189, 17190, 17191, 17192, 17193, 17194, 17195, 17196, 17197, 17198, 17199, 17200, 17201, 17202, 17203, 17204, 17205, 17206, 17207, 17208, 17209, 17210, 17211, 17212, 17213, 17214, 17215, 17216, 17217, 17218]) ]
                    DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> ?product], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ product@1 >= 17157 AND product@1 <= 17218 AND product@1 IN (SET) ([17157, 17158, 17159, 17160, 17161, 17162, 17163, 17164, 17165, 17166, 17167, 17168, 17169, 17170, 17171, 17172, 17173, 17174, 17175, 17176, 17177, 17178, 17179, 17180, 17181, 17182, 17183, 17184, 17185, 17186, 17187, 17188, 17189, 17190, 17191, 17192, 17193, 17194, 17195, 17196, 17197, 17198, 17199, 17200, 17201, 17202, 17203, 17204, 17205, 17206, 17207, 17208, 17209, 17210, 17211, 17212, 17213, 17214, 17215, 17216, 17217, 17218]) ]]
                FilterExec: DynamicFilter [ review@0 >= 84390 AND review@0 <= 115543 AND hash_lookup ]
                  DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://purl.org/stuff/rev#reviewer> ?reviewer], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ review@0 >= 84390 AND review@0 <= 115543 AND hash_lookup ]]
            UnionExec
              FilterExec: DynamicFilter [ review@0 >= 84390 AND review@0 <= 115543 AND hash_lookup ]
                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating1> ?score], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ review@0 >= 84390 AND review@0 <= 115543 AND hash_lookup ]]
              FilterExec: DynamicFilter [ review@0 >= 84390 AND review@0 <= 115543 AND hash_lookup ]
                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating2> ?score], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ review@0 >= 84390 AND review@0 <= 115543 AND hash_lookup ]]
              FilterExec: DynamicFilter [ review@0 >= 84390 AND review@0 <= 115543 AND hash_lookup ]
                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating3> ?score], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ review@0 >= 84390 AND review@0 <= 115543 AND hash_lookup ]]
              FilterExec: DynamicFilter [ review@0 >= 84390 AND review@0 <= 115543 AND hash_lookup ]
                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/rating4> ?score], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ review@0 >= 84390 AND review@0 <= 115543 AND hash_lookup ]]
